--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
-body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: #f4f4f4;
-}
-
-.container {
-    margin-top: 50px;
-}
-
-input {
-    padding: 10px;
-    margin-right: 10px;
-}
-
-button {
-    padding: 10px;
-    cursor: pointer;
-}
-
-#result {
-    margin-top: 20px;
-    font-size: 20px;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Square Calculator</title>
+    <link rel="stylesheet" href="/static/styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Square Calculator</h1>
+        <input type="number" id="number" placeholder="Enter a number">
+        <button id="calculate">Calculate Square</button>
+        <div id="result"></div>
+    </div>
+    <script src="/static/script.js"></script>
+</body>
+</html>
