--- a/index.html
+++ b/index.html
@@ -4,15 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Square Calculator</title>
-    <link rel="stylesheet" href="/static/styles.css">
+    <style>
+        /* CSS Styling */
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            margin-top: 50px;
+        }
+        input {
+            padding: 10px;
+            margin-right: 10px;
+            width: 200px;
+        }
+        button {
+            padding: 10px;
+            cursor: pointer;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        #result {
+            margin-top: 20px;
+            font-size: 20px;
+            color: #333;
+        }
+    </style>
 </head>
 <body>
+    <!-- HTML Content -->
     <div class="container">
         <h1>Square Calculator</h1>
         <input type="number" id="number" placeholder="Enter a number">
-        <button id="calculate">Calculate Square</button>
+        <button onclick="fetchSquare()">Calculate Square</button>
         <div id="result"></div>
     </div>
-    <script src="/static/script.js"></script>
+
+    <script>
+        // JavaScript Code
+        async function fetchSquare() {
+            const number = document.getElementById("number").value;
+            const resultDiv = document.getElementById("result");
+
+            if (!number) {
+                resultDiv.textContent = "Please enter a number.";
+                return;
+            }
+
+            try {
+                const response = await fetch(`/square?number=${number}`);
+                if (!response.ok) {
+                    throw new Error("Failed to calculate square");
+                }
+                const data = await response.json();
+                if (data.result !== undefined) {
+                    resultDiv.textContent = `The square of ${number} is ${data.result}.`;
+                } else {
+                    resultDiv.textContent = "Error: " + data.error;
+                }
+            } catch (error) {
+                resultDiv.textContent = "Error: Unable to calculate square.";
+            }
+        }
+    </script>
 </body>
 </html>
