--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="background-container" id="backgroundContainer"></div>
 
     <script>
-        const backgroundImages = ["1.jpeg", "2.jpeg", "3.jpeg", "4.jpeg", "5.jpeg", "6.jpeg", "7.jpeg", "8.jpeg"];
+        const backgroundImages = ["1", "2", "3", "4", "5", "6", "7", "8"];
         const backgroundContainer = document.getElementById("backgroundContainer");
 
         // Dynamically generate background thumbnails
