--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
     <div class="background-container" id="backgroundContainer"></div>
 
     <script>
-        const backgroundImages = ["1", "2", "3", "4", "5", "6", "7", "8"];
+        const backgroundImages = [
+            "static/1", "static/2", "static/3", "static/4", 
+            "static/5", "static/6", "static/7", "static/8"
+        ];
         const backgroundContainer = document.getElementById("backgroundContainer");
 
         function loadBackgrounds() {
