--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
             transform: scale(1.1);
             border: 2px solid #007bff;
         }
+        table {
+            margin: 20px auto;
+            border-collapse: collapse;
+            width: 50%;
+            color: white;
+        }
+        th, td {
+            padding: 8px 12px;
+            text-align: center;
+            border: 1px solid #ccc;
+        }
     </style>
 </head>
 <body>
@@ -71,7 +82,7 @@
     <div class="background-container" id="backgroundContainer"></div>
 
     <script>
-        const backgroundImages = ["1", "", "3", "4", "5"];
+        const backgroundImages = ["static/1", "static/2", "static/3", "static/4", "static/5"];
         const backgroundContainer = document.getElementById("backgroundContainer");
 
         function loadBackgrounds() {
