--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="background-container" id="backgroundContainer"></div>
 
     <script>
-        const backgroundImages = ["static/1", "static/2", "static/3", "static/4", "static/5"];
+        const backgroundImages = ["1", "2", "3", "4", "5"];
         const backgroundContainer = document.getElementById("backgroundContainer");
 
         function loadBackgrounds() {
